# coffee_room_bot

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  Justfile  Makefile  README.md  config.yaml  docker-compose.yml  messages.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
bot/: main.py
bot/application/: blackjack_service.py  cleanup_service.py  dice_service.py  giveaway_service.py  history_service.py  leaderboard_service.py  llm_service.py  mute_service.py  score_service.py  slots_custom_functions.py  slots_service.py
bot/application/interfaces/: dice_repository.py  event_repository.py  giveaway_repository.py  llm_repository.py  mute_protection_repository.py  mute_repository.py  per_target_limits_repository.py  saved_permissions_repository.py  score_repository.py  user_repository.py  (+1 more)
bot/domain/: bot_utils.py  dice_entities.py  emoji_utils.py  entities.py  giveaway_entities.py  reaction_registry.py  tz.py
bot/infrastructure/: aitunnel_client.py  config_loader.py  di.py  dice_loop.py  giveaway_loop.py  message_formatter.py  page_fetcher.py  redis_store.py  search_engine.py
bot/presentation/: utils.py
configs/: config.yaml  help.yaml  messages.yaml
docs/: architecture.md  backlog.md  commands.md  configuration.md  development.md  index.md  setup.md
docs/games/: blackjack.md  dice.md  giveaway.md  slots.md
migrations/: V004__llm_requests.sql  V006__mute_protection.sql  V007__dice_game.sql  V008__user_stats.sql
monitoring/loki/: loki.yaml
monitoring/promtail/: promtail.yaml
scripts/: deploy.sh  remove_deploy.sh
(+40 files in other folders)
