[project]
name = "score-bot"
version = "0.1.0"
description = "Telegram bot for gamification via reactions"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.26.0",
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "cachetools>=7.0.5",
    "dishka>=1.9.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "trafilatura>=2.0.0",
    "redis[hiredis]>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
